--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title> Grand Opening </title>
   </head>
   <body>
+    <h1> New project </h1>
     Hello there, awesome person!
   </body>
 </html>
