--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1> New project </h1>
     Hello there, awesome person!
+    <img src="https://avatars2.githubusercontent.com/u/60579000?v=4">
   </body>
 </html>
