--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li>www.instagram.com</li>
     <li>www.facebook.com</li>
     <li>www.linkedin.com</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 </ul>
   </body>
 </html>
