--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> Grand Opening </title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1> New project </h1>
