--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <ul>
     <li>www.instagram.com</li>
     <li>www.facebook.com</li>
-    <li>www.linkedin.com</li>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+      <li><a href="https://www.linkedin.com">Linkedin</a></li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a></li>
 </ul>
   </body>
 </html>
