--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <h1> New project </h1>
-    Hello there, awesome person!
+    Developing a new project!
     <img src="https://avatars2.githubusercontent.com/u/60579000?v=4">
     <ul>
-    <li>www.instagram.com</li>
-    <li>www.facebook.com</li>
+    <li><a href="https://www.instagram.com">Instagram</a></li>
+    <li><a href="https://www.facebook.com">Facebook</a></li>
       <li><a href="https://www.linkedin.com">Linkedin</a></li>
-      <li>My favorite site is <a href="https://github.com">GitHub</a></li>
+      <li><a href="https://github.com">GitHub</a></li>
 </ul>
   </body>
 </html>
